--- a/SistemaVenta.API/appsettings.json
+++ b/SistemaVenta.API/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "CadenaSQL":"Server=DESKTOP-AS2EP0Q\\JEAN; DataBase=DBVENTA; Trusted_Connection=True; TrustServerCertificate=True;"
+  "CadenaSQL":"Server=(local); Trusted_Connection=True; TrustServerCertificate=True;"
 }
