nuevos cambios en la sesion1

--- a/SistemaVenta.API/appsettings.json
+++ b/SistemaVenta.API/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "CadenaSQL":"Server=DESKTOP-AS2EP0Q\\JEAN; DataBase=DBVENTA; Trusted_Connection=True; TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "CadenaSQL": "Server=DESKTOP-AS2EP0Q\\JEAN; Database=DBVENTA; Trusted_Connection=True;  TrustServerCertificate=True;"
+  }
+  
 }
